[DEV][Release 1.1.1] - added footer and fixed some layout issues

--- a/Web.Profile.Bren.UI/Components/Layout/MainLayout.razor.css
+++ b/Web.Profile.Bren.UI/Components/Layout/MainLayout.razor.css
@@ -2,10 +2,6 @@ main {
     flex: 1;
 }
 
-.container {
-    max-width: 1100px;
-}
-
 #blazor-error-ui {
     color-scheme: light only;
     background: lightyellow;
@@ -26,3 +22,25 @@ main {
         right: 0.75rem;
         top: 0.5rem;
     }
+
+/* css for desktops */
+@media (min-width: 992px) {
+    .content {
+        margin-top: 60px; /* adjust based on the height of the fixed header */
+        height: calc(100vh - 60px); /* full height minus header height */
+        overflow-y: auto; /* enable scrolling */
+    }
+}
+
+/* css for tablets */
+@media (max-width: 991px) {
+    .content {
+        margin-top: 30px; /* adjust based on the height of the fixed header */
+        height: calc(100vh - 30px); /* full height minus header height */
+        overflow-y: auto; /* enable scrolling */
+    }
+
+    .content-footer-spacing {
+        min-height: calc(100vh - 30px) !important;
+    }
+}
