--- a/Web.Profile.Bren.UI/Components/Layout/NavMenu.razor.css
+++ b/Web.Profile.Bren.UI/Components/Layout/NavMenu.razor.css
@@ -1,5 +1,6 @@
 .navbar {
     /*background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);*/
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .nav-item ::deep .nav-link {
@@ -14,17 +15,23 @@
     width: 100%;
 }
 
-.dropdown-menu ::deep .dropdown-item {
-    color: #00000099;
-    background: none;
-    border: none;
-    border-radius: 4px;
-    height: 3rem;
-    display: flex;
-    align-items: center;
-    line-height: 3rem;
-    width: 100%;
+.dropdown-menu {
+    overflow: hidden;
+    overflow-y: auto;
+    max-height: calc(100vh - 150px);
 }
+
+    .dropdown-menu ::deep .dropdown-item {
+        color: #00000099;
+        background: none;
+        border: none;
+        border-radius: 4px;
+        height: 3rem;
+        display: flex;
+        align-items: center;
+        line-height: 3rem;
+        width: 100%;
+    }
 
 .navbar-brand {
     color: #00000099;
@@ -47,5 +54,6 @@
 
     .dropdown-menu {
         --bs-dropdown-border-color: disable;
+        --bs-dropdown-bg: disable;
     }
 }
